# obs-normalization-filter

./: .gitignore  .gitmodules  README.md  meson.build
include/: normalisation.h
src/: main.c  normalisation.c
